Add .gitignore file

--- a/Python Learn/work1.ipynb
+++ b/Python Learn/work1.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54.21F\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TempStr\n",
     "#请编写程序将用户输入华氏度(F)转换为摄氏度，或将输入的摄氏度(C)转换为华氏度。\n",
@@ -32,25 +24,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#获得用户输入的一个正整数输入，输出该数字对应的中文字符表示。\n",
-    "number = input()\n",
-    "x = \"{0,1,2,3,4,5,6,7,8,9,}\".format(一,二,三,四,五,六,七,八,九)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "四五六四"
-     ]
-    }
-   ],
    "source": [
     "# 创建一个字典，存储数字和中文字符的映射关系\n",
     "num_in = {\n",
@@ -76,7 +49,37 @@
     "\n",
     "s = input()\n",
     "for c in s:\n",
-    "    print(template[eval(c)], end=\"\")"
+    "    if c.isdigit():#确保输入的是数字\n",
+    "        print(\"template[int(c)]\",end=\"\")\n",
+    "    else:\n",
+    "        print(c,end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Money = input()\n",
+    "if Money[0] in [\"R\"]:\n",
+    "    M = Money[3:]/6.78\n",
+    "    print(\"USD{:.2f}\".format(M))\n",
+    "elif Money[0] in [\"U\"]:\n",
+    "    R = Money[3:]*6.78\n",
+    "    print(\"RMB{:.2f}\".format(R))\n",
+    "else:\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = input()\n",
+    "print(\"{:.2f}\".format(eval(s)))"
    ]
   }
  ],
