--- a/test3.ipynb
+++ b/test3.ipynb
@@ -197,6 +197,28 @@
     "\n",
     "print(\"加密结果:\", ''.join(output_str))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number = int(input())\n",
+    "number_self = pow(number,0.5)\n",
+    "print(\"{0:+>30.3f}\".format(number_self))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_str = input()\n",
+    "input_shuzu = \"input_str\".split('-') \n",
+    "print(\"{}+{}\".format(input_shuzu[0],input_shuzu[-1]))"
+   ]
   }
  ],
  "metadata": {
